Minor spelling edit

--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -36,7 +36,7 @@ sleep_productivity <- sleep_productivity_stress |>
 
 Imagine waking up after only a few hours of sleep, and then dragging your tired body through hours of coursework, assignments, and even exams. Now imagine repeating that for days on end, for months! According to @averagesleepduration and @recommendedsleep, most college students get an average of only 6-6.9 hours of sleep per day, although the recommended amount of nightly sleep for college students is 7-9 hours. In the daily life of a college student, certain deadlines and exams often seem to be more important than a few extra hours of sleep. But if this trade-off is sustained over many consecutive days, such as throughout a semester, it may lead to unexpected consequences and actually impair overall academic performance.
 
-This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep a college student gets during weekdays influence their productivity level?"**. As college students ourselves, our goal is to evaluate college students' sleep duration and whether it significantly impacts their academic and general productivity throughout the week. Understanding this connection can suppout us and other students in devising our own methods to improve our academic college lives, as well as our personal health.
+This project aims to investigate the relationship between sleep duration and one of the most crucial aspects of any college student's life: their productivity. Our research question is **"Does the amount of sleep a college student gets during weekdays influence their productivity level?"**. As college students ourselves, our goal is to evaluate college students' sleep duration and whether it significantly impacts their academic and general productivity throughout the week. Understanding this connection can support us and other students in devising our own methods to improve our academic college lives, as well as our personal health.
 
 The data for this study was collected through a Google Form survey. Our target population is college students, and our sample included students from various colleges including Smith College, Amherst College, and UMASS Amherst. We used a convenience sampling method, gathering many of our survey responses from our friends and acquaintances who are also college students. We are investigating whether the amount of sleep a college student gets on weekdays influences their productivity using a **Two-Way Table Test of Independence** with **Chi-square Distribution**.
 
@@ -64,7 +64,7 @@ Our target population is college students.
 
 This data is collected through Google Form. We used convenience sampling with responses from our friends and their acquaintances from Smith College, UMASS Amherst, Amherst College, Brown University, and MIT (USA), as well as National Economic University, Diplomatic Academy of Vietnam, Hanoi University of Science and Technology (Vietnam). Our survey did not collect the name of the school currently attended by the participants, so we do not know the number of observations from each school.
 
-In addition to requesting participation in our survey from our friends at Smith, we posted our Google Form on Smith Confession to increrase diversity in the observations from Smithies. Evelyn also had her Vietnamese friends post it on Meta posts and stories to seek responses from their network of Vietnamese college students. Our friends at colleges other than Smith in the USA also shared our survey with their acquaintances, which helped widen the scope of our survey's observations to include students from as many colleges as possible.
+In addition to requesting participation in our survey from our friends at Smith, we posted our Google Form on Smith Confession to increase diversity in the observations from Smithies. Evelyn also had her Vietnamese friends post it on Meta posts and stories to seek responses from their network of Vietnamese college students. Our friends at colleges other than Smith in the USA also shared our survey with their acquaintances, which helped widen the scope of our survey's observations to include students from as many colleges as possible.
 
 #### Dataset Introduction
 
@@ -175,9 +175,7 @@ sleep_productivity_stress |>
   )
 ```
 
-@tbl-sleep-productivity and the corresponding @fig-sleep-productivity show the distribution of the observed values of productivity levels across different sleep duration. 
-
-It is noticeable that college students who sleep 5-7 hours on average make up the majority of "somewhat productive" group with 29 students, while those who sleep less than 5 hours on average have the highest number of individuals in the "very productive" group with 12 students For both the "not productive" and "very productive" group, the number of college students sleeping 5-7 hours and more than 7 hours on average is the same. Surprisingly, in the "not productive" category, 7 students each reported sleeping 5-7 hours and more than 7 hours on average, both are significantly higher than the number of students sleeping less than 5 hours on average, which was only 1.
+@tbl-sleep-productivity and the corresponding @fig-sleep-productivity show the distribution of the observed values of productivity levels across different sleep duration. It is noticeable that college students who sleep 5-7 hours on average make up the majority of "somewhat productive" group with 29 students, while those who sleep less than 5 hours on average have the highest number of individuals in the "very productive" group with 12 students For both the "not productive" and "very productive" group, the number of college students sleeping 5-7 hours and more than 7 hours on average is the same. Surprisingly, in the "not productive" category, 7 students each reported sleeping 5-7 hours and more than 7 hours on average, both are significantly higher than the number of students sleeping less than 5 hours on average, which was only 1.
 
 ## Results
 
@@ -195,7 +193,7 @@ The Conditions for Two-Way Table Test of Independence include **Independence**, 
 
 For the **Independence** condition, the use of convenience sampling method may introduce certain dependence among observations by overrepresenting students from certain social circles or colleges with similar traits, behaviors, or habits, potentially skewing the results. Thus, the Independence condition for Two-Way Table Test of Independence is not met.
 
-If college students' weekday sleep durations and productivity levels are truly independent under the null hypothesis $H_0$ of independence, our expected count - the frequency that would be expected in a cell - for all cells would be as follows:
+If college students' weekday sleep duration and productivity levels are truly independent under the null hypothesis $H_0$ of independence, our expected count - the frequency that would be expected in a cell - for all cells would be as follows:
 
 ```{r}
 #| label: tbl-sleep-productivity-expected
@@ -270,13 +268,13 @@ Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the 
 
 ## Discussion
 
-The statistical analysis above set out to test the relationship between average hours of sleep gotten on weekdays and productivity level in college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets on weekdays influences their productivity level, which answered our original research question. However, our population of interest was all college students, and our sample is not accurately representative of this population of interest. Although our data included observations from students at multiple colleges, the colleges we received data from was based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
+The statistical analysis above set out to test the relationship between average hours of sleep gotten on weekdays and productivity level of college students. Our analysis showed that there is statistically significant evidence that the amount of sleep a college student gets on weekdays influences their productivity level, which answered our original research question. However, our population of interest was all college students, and our sample is not accurately representative of this population of interest. Although our data included observations from students at multiple colleges, the colleges we received data from was based on convenience, instead of any sort of randomized process. Thus, our results cannot be generalized to the entire population of interest. 
 
 Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into an ordinal categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in another ordinal categorical variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within these three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical was the Two-Way Table Test of Independence using a mathematical model. 
 
-A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays (at the $\alpha = .01$ significance level, p-value = .006615).  
+A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays at the $\alpha = .01$ significance level.  
 
-Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019 is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019 found that longer duration of sleep is strongly associated with improved college academic performance.
+Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019sleep is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019sleep found that longer duration of sleep is strongly associated with improved college academic performance.
 
 This is reaffirmed by the results of another thematically related study. @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation; only the ones most pertinent to the research we conducted are included here. Once again, the published literature reaffirms our finding that getting less sleep diminishes a student’s ability to perform productively. Based on the results of both of these studies, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
 
