--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -272,7 +272,7 @@ The statistical analysis above set out to test the relationship between average 
 
 Data was self-reported and was collected from college students using convenience sampling with a Google Form. We reached out to our peers who are also in college, and received responses from Smithies, as well as many individuals who attend colleges other than Smith. To assure consistency and ease of data analysis, the questions on the Google Form were answerable only by multiple choice options. There were three options for average amount of sleep on weekdays, dividing observations into: less than 5 hours, 5-7 hours, and more than 7 hours. This converted the data for hours, which are typically continuous numerical values, into an ordinal categorical variable. Survey participants indicated their self-evaluated productivity as “not productive”, “somewhat productive”, or “very productive”. This resulted in another ordinal categorical variable for the data regarding productivity. @fig-sleep and @fig-productivity show the proportions of survey respondents that indicated themselves as falling within these three divisions of hours of sleep and productivity, respectively. @tbl-sleep-productivity and @fig-sleep-productivity summarize the distribution of both of our variables, displaying the counts of observations grouped by both hours of sleep and productivity. We determined that the appropriate statistical analysis to use in this context given that both of our variables are categorical was the Two-Way Table Test of Independence using a mathematical model. 
 
-A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts for all cells in our contingency table are greater than 5. Expected count is a measure of the total for the row in which a given value is found multiplied by the column total for the same value, divided by the table total. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays at the $\alpha = .01$ significance level.  
+A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts - the frequency that would be expected in a cell - for all cells in our contingency table are greater than or equal to 5. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays at the $\alpha = .01$ significance level.  
 
 Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019sleep is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019sleep found that longer duration of sleep is strongly associated with improved college academic performance.
 
