edit bib & shorten discussion

--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -274,9 +274,7 @@ Data was self-reported and was collected from college students using convenience
 
 A major limitation of our analysis is that it was conducted despite the data meeting neither the Independence nor the Large Sample conditions for our chosen hypothesis test. The Independence condition can not be met given that we did not collect data using a random sample. The Large Sample condition requires that the expected counts - the frequency that would be expected in a cell - for all cells in our contingency table are greater than or equal to 5. As indicated in @tbl-sleep-productivity-expected, two out of nine cells do not meet the Large Sample condition; the expected counts for these two cells is less than 5. This means that our test statistics $\chi^2$ may be inaccurate, making our calculated p-value inaccurate as well. If the p-value is smaller than it should be, we may be more likely to reject the null hypothesis when it is actually true, resulting in a Type 1 error. If the p-value is larger than it should be, we may be more likely to fail to reject the null hypothesis when the alternative hypothesis is actually true, which would be a Type 2 error. We conducted our hypothesis test under the assumption that the conditions described above were met. The hypothesis test concluded that the self-reported average productivity level of college students is dependent on the average amount of sleep they get during weekdays at the $\alpha = .01$ significance level.  
 
-Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019sleep is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019sleep found that longer duration of sleep is strongly associated with improved college academic performance.
-
-This is reaffirmed by the results of another thematically related study. @preetha2020knowledge is an analysis of levels of awareness among dental students that getting insufficient sleep is detrimental to productivity. Similarly to our study, the data were collected by distributing online surveys. The study found that 74% of surveyed individuals are aware that inadequate sleep causes stress, and the same percentage responded that they were aware that insufficient sleep causes degeneration of cognitive functions. 77% of participants claimed to be aware that insufficient sleep can trigger irritability. The study’s results include further analyses of dental student’s knowledge of the negative effects of sleep deprivation; only the ones most pertinent to the research we conducted are included here. Once again, the published literature reaffirms our finding that getting less sleep diminishes a student’s ability to perform productively. Based on the results of both of these studies, it seems probable that our result reflects a real correlation between shorter sleep duration and lower overall productivity level in college students. 
+Although our results can not be generalized to the population of interest, they are congruent with published research on similar topics. For example, @okano2019sleep is a study performed on student volunteers enrolled in the Massachusetts Institute of Technology’s Introduction to Solid State Chemistry course. The study explored the relationship between academic performance as measured by scores in the Chemistry course and sleep duration, as measured by a Fitbit wearable activity tracker. The tracker uses health statistics such as heart rate and motion sensing to collect the data used in this study, including sleep duration. @okano2019sleep found that longer duration of sleep is strongly associated with improved college academic performance, which can be an effective indicator of college students' productivity.
 
 Many other analyses could be conducted with the data we gathered using this form. These other variables dictate the most feasible and convenient possible future extensions to this research project. Our Google Form collected a total of six variables, only two of which were used for the statistical analysis conducted above. The variables we did not use include class year, major division, whether the respondent considers themselves an early bird or a night owl, and stress level (as a categorical variable formulated similarly to those used in the we conducted). Based on these variables, we could consider examining whether stress (or productivity) levels vary based on major division or class year. We could also evaluate whether being an early bird or a night owl is correlated with higher or lower stress or productivity levels. Beyond the scope of the dataset we have collected, we could consider using random sampling to select colleges throughout the world from which to collect data, and then randomly sample students enrolled there in order to compile a larger and more robust data set. Statistical analyses of such a dataset would yield results generalizable to the entire target population of college students.
 
